# Rizzie-Hellmans

./: .env.example  .gitignore  README.md  database.js  index.js  package-lock.json  package.json  users.db
client/: CMakeLists.txt
client/src/: main.cpp
docs/: api.md  integration-tests.md
docs/blockchain/: MessageHash.sol  contract.json
public/: index.html  verify.html
public/css/: rizz.css
public/js/: api.js  app.js  crypto.js  demo.js
src/cpp-client/: CMakeLists.txt  README.md
src/cpp-client/include/: Client.h  Conversation.h  CryptoUtils.h  HttpClient.h  KeyStore.h  Message.h  MessageStore.h  User.h
src/cpp-client/src/: Client.cpp  Conversation.cpp  CryptoUtils.cpp  HttpClient.cpp  KeyStore.cpp  MessageStore.cpp  User.cpp  main.cpp
src/server/: blockchain.js  database.js  index.js  package-lock.json  package.json
src/server/middleware/: validation.js
